[java, highlighting] jigsaw#isAccessible: support "--add-exports" option. IDEA-345277
GitOrigin-RevId: 0ef641d506f3c6d9cf3968f015370483e5789569